--- a/index.html
+++ b/index.html
@@ -8,9 +8,27 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="style.css">
+
+    <title>How old is Ivan Alekseevich?</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <main role="main" class="container">
+
+      <div>
+        <h1>How old is Ivan Alekseevich?</h1>
+        <p class="lead">Well, in case you forgot, Ivan Alekseevich is now <strong class="js-years"></strong> years <strong class="js-months"></strong> months and <strong class="js-days"></strong> days old.</p>
+      </div>
+
+
+      <footer class="mt-auto footer">
+        <p>&copy; 2018 Uncle Lyosha Studios</p>
+      </footer>
+
+    </main><!-- /.container -->
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js" integrity="sha256-59IZ5dbLyByZgSsRE3Z0TjDuX7e1AiqW5bZ8Bg50dsU=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
   </body>
 </html>
