add link to github

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
       <footer class="mt-auto footer">
-        <p>&copy; 2018 Uncle Lyosha Studios</p>
+        <p><a href="https://github.com/STYTZ/how-old-is-ivan-alekseevich">Source code</a> &copy; 2018 Uncle Lyosha Studios</p>
       </footer>
 
     </main><!-- /.container -->
