--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <div>
         <h1>How old is Ivan Alekseevich?</h1>
-        <p class="lead">Well, in case you forgot, Ivan Alekseevich is now <strong class="js-years"></strong> years <strong class="js-months"></strong> months and <strong class="js-days"></strong> days old.</p>
+        <p class="lead">Well, in case you forgot, Ivan Alekseevich is now <strong class="js-years"></strong> years, <strong class="js-months"></strong> months and <strong class="js-days"></strong> days old.</p>
       </div>
 
 
